dark mode added in  auth pages

--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,8 @@
     --border: 240 5.9% 90%;
     --input: 240 5.9% 90%;
     --ring: 160, 69.23%, 45.88%;
-    --radius: 0.5rem;
+  
+    --auth-bg: 218 11% 65%;
   }
  
 
@@ -46,5 +47,6 @@
     --border: 240 3.7% 15.9%;
     --input: 240 3.7% 15.9%;
     --ring: 142.4 71.8% 29.2%;
+    --auth-bg: 217 19% 27%;
   }
  
